--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,7 @@
         android:id="@+id/main_fragments_host"
         android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="0dp"
+        app:defaultNavHost="true"
         android:layout_height="match_parent"
         app:navGraph="@navigation/main_graph"
         android:layout_weight="1"
