--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -10,4 +10,9 @@
         android:name="com.achulkov.curiosityroverphotos.ui.PhotoListFragment"
         android:label="fragment_photo_list"
         tools:layout="@layout/fragment_photo_list" />
+    <fragment
+        android:id="@+id/singlePhotoFragment"
+        android:name="com.achulkov.curiosityroverphotos.ui.SinglePhotoFragment"
+        android:label="fragment_single_photo"
+        tools:layout="@layout/fragment_single_photo" />
 </navigation>
